message-form style cleanup

--- a/web/index.html
+++ b/web/index.html
@@ -13,11 +13,12 @@
     <!-- header -->
     <header class='container'>
       <span>Talk</span>
-      <input type='textfield' id='search'>
+      <input type='textfield' id='search' class='input-xlarge' placeholder='Search ...'>
       <span>
         <span>Logged in as </span>
         <span>dlink</span>
       </span>
+    <hr>
     </header
 
     <!-- main section -->
