--- a/web/message-form.html
+++ b/web/message-form.html
@@ -1,3 +1,8 @@
-<div>
-  <p>What's on your mind (type in new message here)</p>
+
+
+<div class='messageCard'>
+  <div class='newMessage' ng-controller='messageFormController as messageFormCtrl'>
+    <img class='img-thumbnail' src='images/generic_icon.png'></img>
+    <input id='new_message_text' type='text' placeholder="What's on your mind?" class='input-xlarge'>
+  </div>
 </div>
