Moved header section into header-section.html

--- a/web/index.html
+++ b/web/index.html
@@ -12,13 +12,9 @@
 
     <!-- header -->
     <header class='container'>
-      <span>Talk</span>
-      <input type='textfield' id='search' class='input-xlarge' placeholder='Search ...'>
-      <span>
-	<span>Logged in as </span>
-	<span>dlink</span>
-      </span>
-    <hr>
+
+      <header-section></header-section>
+
     </header
 
     <div class='container row'>
