index: header section styling

--- a/web/header-section.html
+++ b/web/header-section.html
@@ -1,9 +1,9 @@
-
-      <span>Talk</span>
-      <input type='textfield' id='search' class='input-xlarge' placeholder='Search ...'>
+<div id='header'>
+      <span id='headerName'>Talk</span>
+      <input type='textfield' id='searchField' class='input-xlarge' placeholder='Search ...'>
       <span>
 	<span>Logged in as </span>
 	<span>dlink</span>
       </span>
 
-      <hr>
+</div>
