renamed message-form to new-form

--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,7 @@
       <!-- Center Panel -->
       <section class='col-md-6'>
 
-	<message-form></message-form>
+	<new-message></new-message>
 
 	<messages></messages>
 
