--- a/web/index.html
+++ b/web/index.html
@@ -17,10 +17,10 @@
     <div class='container row'>
 
       <!-- Left Panel -->
-      <div class='col-md-3'></div>
+      <div class='leftPanel col-md-2'></div>
 
       <!-- Center Panel -->
-      <section class='col-md-6'>
+      <section class='cenerPanel col-md-8'>
 
 	<new-message></new-message>
 
@@ -29,7 +29,7 @@
       </section>
 
       <!-- Right Pannel -->
-      <div class='col-md-3'></div>
+      <div class='rightPanel col-md-2'></div>
     </div>
 
     <!-- footer -->
