new message cleanup

--- a/web/new-message.html
+++ b/web/new-message.html
@@ -7,10 +7,7 @@
       <textarea class='newMessageText form-control' rows='2'
 		ng-model='messageCtrl.new_message.text' placeholder="What's up?"></textarea>
       <button type="button" class="postButton btn btn-primary"
-	      ng-click='messageCtrl.update()'>
-	Post
-      </button>
-      {{messageCtrl.new_message.text}}
+	      ng-click='messageCtrl.update()'>Post</button>
     </span>
   </div>
 </form>
