Now getting messages via Ajax

--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,7 @@
       <div class='leftPanel col-md-2'></div>
 
       <!-- Center Panel -->
-      <section class='cenerPanel col-md-8'>
+      <section class='cenerPanel col-md-8' ng-controller='messageCtrl'>
 
 	<new-message></new-message>
 
