--- a/web/messages.html
+++ b/web/messages.html
@@ -1,6 +1,6 @@
 
-<div id='messageArea' ng-controller='messageController as messageCtrl'>
-  <div class='messageCard' ng-repeat='message in messageCtrl.messages'>
+<div id='messageArea'>
+  <div class='messageCard' ng-repeat='message in messages'>
     <div id="{{'message_card_' + message.id}}">
       <div class='userIcon'>
 	<img class='img-thumbnail' src='images/generic_icon.png'></img>
