--- a/web/body-section.html
+++ b/web/body-section.html
@@ -1,8 +1,10 @@
 <div class='container row'>
 
    <div class='leftPanel col-md-2'></div>
-      <section class='cenerPanel col-md-8'>
-      %s
-      </section>
 
+   <section class='cenerPanel col-md-8'>
+   %s
+   </section>
+
+   <div class='rightPanel col-md-2'></div>
 </div>
