Introduce Session Login/Logout, and Profile Page

--- a/web/header-section2.html
+++ b/web/header-section2.html
@@ -1,8 +1,10 @@
 <div id='header'>
-      <span id='headerName'>Stemsible</span>
+      <span id='headerName' onclick="location.href='main.py'",
+             class='cursor-pointer'>
+         Stemsible
+      </span>
       <input type='textfield' id='searchField' class='input-xlarge' placeholder='Search ...'>
       <span>
-	<span>Welcome </span>
 	<span>%s</span>
 
         <span id='user_chooser'>%s</span>
