Added the left and right panels

--- a/web/body-section.html
+++ b/web/body-section.html
@@ -1,10 +1,46 @@
 <div class='container row'>
 
-   <div class='leftPanel col-md-2'></div>
+   <div class='leftPanel col-md-2'>
+     <p></p>
+     <table class="table">
+       <thead>
+         <tr>
+           <th>School & County</th>
+         </tr>
+       </thead>
+       <tbody>
+         %s
+       </tbody>
+       <thead>
+         <tr>
+           <th>Groups</th>
+         </tr>
+       </thead>
+       <tbody>
+         %s
+       </tbody>
+     </table>
+   </div>
 
-   <section class='cenerPanel col-md-8'>
-   %s
+   <section class='centerPanel col-md-8'>
+     %s
    </section>
 
-   <div class='rightPanel col-md-2'></div>
+   <div class='rightPanel col-md-2'>
+     <p></p>
+     <table class="table">
+       <thead>
+         <tr>
+           <th>Trending Tags</th>
+         </tr>
+       </thead>
+       <tbody>
+         <tr>
+           <td>
+             %s
+           </td>
+         </tr>
+       </tbody>
+     </table>
+   </div>
 </div>
