--- a/web/header-section2.html
+++ b/web/header-section2.html
@@ -1,5 +1,5 @@
 <div id='header'>
-      <span id='headerName'>Talk</span>
+      <span id='headerName'>Stemsible</span>
       <input type='textfield' id='searchField' class='input-xlarge' placeholder='Search ...'>
       <span>
 	<span>Welcome </span>
