--- a/web/new-message2.html
+++ b/web/new-message2.html
@@ -4,9 +4,12 @@
   <div class='newMessage'>
     <span class='.form-group'>
       <textarea class='newMessageText form-control' rows='1'
-		name='new_message' placeholder="What's up?"></textarea>
-      <button type="button" class="postButton btn btn-primary"
-         onclick='submit()'>Post</button>
+		name='new_message' placeholder="What's on your mind?"></textarea>
+	  </br>
+	  <div class=text-right>
+        <button type="button" class="postButton btn btn-primary btn-md"
+        onclick='submit()'>Post</button>
+      </div>
     </span>
   </div>
 </div>
