Implementing Signeup functionality

--- a/web/header-section2.html
+++ b/web/header-section2.html
@@ -3,11 +3,12 @@
              class='cursor-pointer'>
          Stemsible
       </span>
-      <input type='textfield' id='searchField' class='input-xlarge' placeholder='Search ...'>
+      <!-- input type='textfield' id='searchField' class='input-xlarge' placeholder='Search ...'-->
       <span>
-	<span>%s</span>
-
-        <span id='user_chooser'>%s</span>
+	<span class='pull-right'>
+          %s
+          %s
+         </span>
       </span>
 
 </div>
