CLEANUP2: Updated look and feel of UI

--- a/web/body-section.html
+++ b/web/body-section.html
@@ -1,14 +1,17 @@
 <div class='container row'>
 
-   <div class='leftPanel col-md-2'>
-     %s
+   <div class='zeroPanel col-md-1'>
    </div>
 
-   <section class='centerPanel col-md-8'>
-     %s
+   <div class='leftPanel col-md-2'>
+     <span id='school-entry'> %s </span>
+   </div>
+
+   <section class='centerPanel col-md-7'>
+     <span> %s </span>
    </section>
 
    <div class='rightPanel col-md-2'>
-     %s
+     <span id='tag-entry'> %s </span>
    </div>
 </div>
