--- a/web/new-message2.html
+++ b/web/new-message2.html
@@ -1,5 +1,3 @@
-
-
 <div class='messageCard'>
   <div class='newMessage'>
     <span class='.form-group'>
@@ -7,7 +5,7 @@
 		name='new_message' placeholder="What's on your mind?"></textarea>
 	  </br>
 	  <div class=text-right>
-        <button type="button" class="postButton btn btn-primary btn-md"
+        <button type="button" class="postButton btn btn-primary btn-md customButton"
         onclick='submit()'>Post</button>
       </div>
     </span>
