Profile Revamp - now allows School add/delete

--- a/web/profile-section.html
+++ b/web/profile-section.html
@@ -1,12 +1,8 @@
-<div class='container row'>
+<div class='container'>
 
-   <div class='leftPanel col-md-1'>
+   <div class='leftPanel col-md-5'>
      %s
    </div>
-
-   <section class='centerPanel col-md-4'>
-     %s
-   </section>
 
    <div class='rightPanel col-md-7'>
      %s
