A new and nicer home page.

--- a/web/header-section.html
+++ b/web/header-section.html
@@ -1,9 +1,11 @@
-<div id='header'>
-      <span id='headerName'>Talk</span>
-      <input type='textfield' id='searchField' class='input-xlarge' placeholder='Search ...'>
-      <span>
-	<span>Logged in as </span>
-	<span>dlink</span>
-      </span>
+<div id='header' class="row">
+  <div id='company-name' class='col-xs-12 col-sm-3' onclick="location.href='main.py'",
+        class='cursor-pointer'>
+    <span>Stemsible<span>
+  </div>
+
+  <div id='header-login' class='col-xs-12 col-sm-9'>
+    %s
+  </div>
 
 </div>
