--- a/web/header-section.html
+++ b/web/header-section.html
@@ -5,7 +5,7 @@
   </div>
 
 
-  <div id='header-search' class='col-xs-12 col-sm-5'>
+  <div id='header-search' class='col-xs-12 col-sm-5 %s'>
      <form name='header-search-form' method='post' action='/main.py'>
         <input class='form-control submit-on-enter' name='search'
 	       value='%s' placeholder="Search Stemsible" />
