tag section: making some tags real

--- a/web/header-section.html
+++ b/web/header-section.html
@@ -7,7 +7,7 @@
 
   <div id='header-search' class='col-xs-12 col-sm-5 %s'>
      <form name='header-search-form' method='post' action='/main.py'>
-        <input class='form-control submit-on-enter' name='search'
+        <input class='form-control submit-on-enter' id='search' name='search'
 	       value='%s' placeholder="Search Stemsible" />
      </form>
   </div>
