--- a/web/about.html
+++ b/web/about.html
@@ -15,10 +15,11 @@
    </div>
 
    <div class='rightPanel col-md-5 col-sm-12'>
+     <h3>Mission</h3>
+     <p>To empower parents and teachers to improve our children's learning and growth outcomes.</p>
+
      <h3>About Us</h3>
-     <p>Welcome to Stemsible! We believe that our children are our future and that we must do everything to improve and unlock their growth potential. We believe that every parent and teacher across the world wants just one thing - to see our children to be happy, healthy, smart, respectful, and in the long run, decent, contributing global citizens. We believe that education, sports, art, and music are the primary activities that help children grow and excel</p>
+     <p>Welcome to Stemsible! We believe that our children are our future and that we must do everything to improve and unlock their growth potential. We believe that every parent and teacher across the world wants just one thing - to see our children to be happy, healthy, smart, respectful, and in the long run, decent, contributing global citizens. We believe that education, sports, art, and music are the primary activities that help children grow and excel. We believe that Stemsible will connect citizens, classrooms, and communities across the world and allow the free exchange of information and knowledge that can improve our children's current outcomes and future potential.</p>
      
-       <h3>Mission</h3>
-       <p>Stemsible's mission is simple: To empower parents, teachers, and administrators to improve our children's learning, growth, and social outcomes. As stakeholders in our children's overall well being, each one of us has different levels and types of knowledge. We want to connect the stakeholders so that valuable information and knowledge can be exchanged across classrooms, communities, and countries. We want to empower everyone to share their ideas and challenges so that they can benefit from each other and in turn, unlock the potential and improve the future outcomes of our children. When you join Stemsible, you get access to ideas, updates, tips, discussions, and resources that help you be more informed and effective at making your children's present and future better.</p>
    </div>
 </div>
