--- a/web/header-section.html
+++ b/web/header-section.html
@@ -6,9 +6,10 @@
 
 
   <div id='header-search' class='col-xs-12 col-sm-5 %s'>
-     <form name='header-search-form' method='post' action='/main.py'>
+    <form id='header-search-form' name='header-search-form'
+	  method='post' action='/main.py'>
         <input class='form-control submit-on-enter' id='search' name='search'
-	       value='%s' placeholder="Search Stemsible" />
+	       value="%s" placeholder="Search Stemsible" />
      </form>
   </div>
 
