updated help page per David feedback

--- a/web/help.html
+++ b/web/help.html
@@ -38,13 +38,13 @@
     <p class='ques'> How do I change (update, add, delete) my school relationships?</p>
     <p class='ans'> You can do this from your <a href="/profile.py">profile page</a>. Just log into Stemsible, then click on your name on the top right corner, and you will be in the profile page. Here you will be able to view and edit the school relationships.</p>
     <p class='ques'> I do not see my school in the list. How do I add/request it?</p>
-    <p class='ans'> We are adding new schools and county/districts on a daily basis. If you can't find your school in the current list, please email the following information to info@stemsible.com and we will add the school within 1 business day - school name, school county/district, school address (street address, city, state, country, zip/pin code), school type (Pre-K, Elementary, Middle, High). We may need to follow-up with you for additional clarification.</p>
+    <p class='ans'> We are adding new schools and county/districts on a daily basis. If you can't find your school in the current list, go ahead and just type it in. Alternately, you can <a href="mailto:info@stemsible.com?Subject=New%20School">email</a> the following information to info@stemsible.com and we will add the school within 1 business day - school name, school county/district, school address (street address, city, state, country, zip/pin code), school type (Pre-K, Elementary, Middle, High). We may need to follow-up with you for additional clarification.</p>
     <p class='ques'> My school info is incorrect (spelling, etc.). How do I correct it?</p>
-    <p class='ans'> Please email the correct set of information to info@stemsible.com and we will update it within 1 business day - school name, school county/district, school address (street address, city, state, country, zip/pin code), school type (Pre-K, Elementary, Middle, High). We may need to follow-up with you for additional clarification.</p>
+    <p class='ans'> Please <a href="mailto:info@stemsible.com?Subject=Incorrect%20School%20Info">email</a> the correct set of information to info@stemsible.com and we will update it within 1 business day. We may need to follow-up with you for additional clarification.</p>
       
     <p class='list-header'>News Feed</p>
     <p class='ques'> How does News Feed work?</p>
-    <p class='ans'> News Feed is the constantly updating list of updates in the middle of your home page. News Feed includes questions/answers, school updates, advice/tips, discussion threads, and influential news/research items shared by parents, teachers, and school administrators.</p>
+    <p class='ans'> News Feed on your home page are constantly updated. News Feed includes questions/answers, school updates, advice/tips, discussion threads, and influential news/research items shared by parents, teachers, school administrators, and by you.</p>
     <p class='ques'> How does News Feed decide which updates and articles to show?</p>
     <p class='ans'> The stories that show in your News Feed are influenced by your school preferences (grades, level, county/district). This helps you see updates that are relevant to you from parents, teachers, and local administrators. Also, if your school preferences include an "interest in another school", the News Feed will also include updates from that specific school(s).</p>
     <p class='ques'> Why am I seeing updates from people from other schools, cities, or counties/districts?</p>
@@ -52,7 +52,7 @@
 
     <p class='list-header'>Posting</p>
     <p class='ques'> How do I share a link/URL on Stemsible?</p>
-    <p class='ans'> You can share a link/URL by simply copy/paste or type the URL (http://www.... Or https://www...) within your update/message. As soon the URL is typed, a preview box will pop-up right under the message. Once you POST the update/message, the message content along with the URL preview will show up in your News Feed as well as the News Feed of other parents, teachers, and administrators that from you grade, school, or county/district. The update will also show up in the News Feed of the parents that have an "interest in your school".</p>
+    <p class='ans'> You can share a link/URL by simply copy/paste or type the URL (www....) within your update/message. As soon the URL is typed, a preview box will pop-up right under the message. Once you POST the update/message, the message content along with the URL preview will show up in your News Feed as well as the News Feed of other parents, teachers, and administrators that are from you grade, school, or county/district. The update will also show up in the News Feed of the parents that have an "interest in your school".</p>
     <p class='ques'> How do I edit a post I have shared?</p>
     <p class='ans'> Stemsible doesn't support this feature at this time but we are working on adding it in the very near future.</p>
     <p class='ques'> How do I delete a post I have shared?</p>
@@ -70,7 +70,7 @@
 
     <p class='list-header'>Reporting Something</p>
     <p class='ques'> How do I report malicious activity or derogatory content?</p>
-    <p class='ans'> Please email the offender user name and any other information about the update/post to info@stemsible.com and we will take suitable action (including removing the post from News Feed) immediately. We are also working on adding a button next to each POST in the very near future that will allow the user to mark the post as malicious, suspicious, or offensive.</p>
+    <p class='ans'> Please <a href="mailto:info@stemsible.com?Subject=Malicious%20Activity">email</a> the offender user name and any other information about the update/post to info@stemsible.com and we will take suitable action (including removing the post from News Feed) immediately. We are also working on adding a button next to each POST in the very near future that will allow the user to mark the post as malicious, suspicious, or offensive.</p>
 
    </div>
 </div>
