Home page refresh

--- a/web/header2.html
+++ b/web/header2.html
@@ -1,11 +1,12 @@
 <div id='header' class="row">
-  <div id='company-name' class='col-xs-12 col-sm-3' onclick="location.href='main.py'",
-        class='cursor-pointer'>
-    <span>Stemsible%s<span>
+  <div id='company-name' class='col-xs-12 col-sm-3'
+       onclick="location.href='main.py'",
+       class='cursor-pointer'>
+    <span>Stemsible<span class="small">%s<span></span>
   </div>
 
 
-  <div id='header-search' class='col-xs-12 col-sm-5 %s'>
+  <div id='header-search' class='col-xs-12 col-sm-5'>
     <form id='header-search-form' name='header-search-form'
 	  method='post' action='/main.py'>
         <input class='form-control submit-on-enter' id='search' name='search'
