--- a/web/verification_fail.html
+++ b/web/verification_fail.html
@@ -11,7 +11,7 @@
   <div class='panel col-sm-12'>
 
     <h3>Oops</h3>
-    <p>Email verfication was no successful.</p>
+    <p>Email verfication was not successful.</p>
     <p>Check the email we sent you when you signed up.  It has a link you should click on to verify your account.</p>
     <p>If you have any questions, write us at <a href="mailto:info@semsible.com">info@stemsible.com</a></p>
     <p>
