--- a/web/home.html
+++ b/web/home.html
@@ -1,8 +1,8 @@
 <div id='home-page' class='row'>
 
    <div class='col-xs-12 col-sm-8'>
-      <h3>A place for parents to discuss and influence our children's
-          learning.</h3>
+     <h3 id="header1">A place for parents to discuss and influence<br/>
+                      our children's learning.</h3>
 
       <div class='col-xs-9 col-sm-6'>
          <h4>Ask</h4>
