updated terms, added privacy, updated message on home

--- a/web/home.html
+++ b/web/home.html
@@ -14,7 +14,7 @@
             child's accomplishments</p>
 
          <h4>Advice</h4>
-         <p>Give or seek advice on how to manage a challenging chold or
+         <p>Give or seek advice on how to manage a challenging child or
             which AP courses to take</p>
       </div>
 
