--- a/lib/email.html
+++ b/lib/email.html
@@ -17,7 +17,7 @@
                         <table border="0" cellpadding="10" cellspacing="0" width="100%">
                             <tr>
                                 <td valign="top" class="leftColumnContent" style="padding:0px;padding-top:5px;" align="right">
-                                    <img src="like.png"  width="25%" class="columnImage" />
+                                    <img src="http://stemsible.com/images/thumbs-up2.png"  width="25%" class="columnImage" />
                                 </td>
                                 <td valign="center" class="leftColumnContent" align="left" style="padding:0px;padding-left:10px;">
                                     <h4 style="margin:0px;margin-top:5px;font-size:12px;">{{ likes }} new likes</h4>
@@ -30,7 +30,7 @@
                         <table border="0" cellpadding="10" cellspacing="0" width="100%">
                             <tr>
                                 <td valign="top" class="leftColumnContent" style="padding:0px;padding-top:5px;" align="right">
-                                    <img src="comment.png"  width="25%" class="columnImage" />
+                                    <img src="http://stemsible.com/images/comment.png" width="50%" class="columnImage" />
                                 </td>
                                 <td valign="center" class="leftColumnContent" align="left" style="padding:0px;padding-left:10px;">
                                     <h4 style="margin:0px;margin-top:5px;font-size:12px;">{{ comments }} new comments</h4>
@@ -43,7 +43,7 @@
                         <table border="0" cellpadding="10" cellspacing="0" width="100%">
                             <tr>
                                 <td valign="top" class="leftColumnContent" style="padding:0px;padding-top:5px;" align="right">
-                                    <img src="posts.png"  width="25%" class="columnImage" />
+                                    <img src="http://stemsible.com/images/generic_icon.png"  width="25%" class="columnImage" />
                                 </td>
                                 <td valign="center" class="leftColumnContent" align="left" style="padding:0px;padding-left:10px;">
                                     <h4 style="margin:0px;margin-top:5px;font-size:12px;">{{ plength }} new posts</h4>
@@ -60,7 +60,7 @@
             <table border="0" cellpadding="0" cellspacing="0" width="85%" style="margin-left:7%;margin-right:5%;margin-bottom:15px;">
                 <tr>
                     <td width="10%">
-                        <img src="profile.png" width="50%" class="columnImage" />
+		      <img src=http://stemsible.com/{{ p['profile_image'] }} width="50%" class="columnImage" />
                     </td>
                     <td width="70%">
                         <h4 style="margin:0px;margin-top:2px;font-size:12px;color:#0B5EBC">{{ p['name'] }}</h4>
