--- a/web/home.html
+++ b/web/home.html
@@ -1,8 +1,8 @@
 <div id='home-page' class='row'>
 
    <div class='col-xs-12 col-sm-8'>
-      <h3>Engage, Discuss, and Influence</h3>
-      <h3>Our Children's Learning and Growth.</h3>
+      <h3 id="header1">Engage, Discuss, and Influence<br/>
+          Our Children's Learning and Growth.</h3>
 
       <div class='col-xs-9 col-sm-6'>
          <h4>Ask</h4>
