--- a/lib/email.html
+++ b/lib/email.html
@@ -60,7 +60,7 @@
             <table border="0" cellpadding="0" cellspacing="0" width="85%" style="margin-left:7%;margin-right:5%;margin-bottom:15px;">
                 <tr>
                     <td width="10%">
-		      <img src=http://stemsible.com/{{ p['profile_image'] }} width="50%" class="columnImage" />
+		      <img src=http://stemsible.com/{{ p['profile_image'] }} width="70px" class="columnImage" />
                     </td>
                     <td width="70%">
                         <h4 style="margin:0px;margin-top:2px;font-size:12px;color:#0B5EBC">{{ p['name'] }}</h4>
