email notification tweek

--- a/lib/email.html
+++ b/lib/email.html
@@ -74,7 +74,7 @@
                 <tr>
                     <td>
                         <p style="font-size:11px;margin:0px;text-overflow:ellipsis;">{{ p['text'] }}</p>
-                        <a href="http://www.stemsible.com" style="font-size:11px;" target="_blank">Read More>></a>
+                        <a href="http://www.stemsible.com" style="font-size:11px;" target="_blank">Go to Stemsible</a>
                     </td>
                 </tr>
             </table>
