--- a/lib/email.html
+++ b/lib/email.html
@@ -2,7 +2,7 @@
 <html>
     <body style="margin:10px;padding-left:5%;font-family:Helvetica, Arial, sans-serif;">
         <table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="bodyTable">
-            <table border="0" cellpadding="0" cellspacing="0" width="100%" style="background-color:#0B5EBC; border:1px solid #353535; border-radius:2px;">
+            <table border="0" cellpadding="0" cellspacing="0" width="100%" style="background-color:#4090bf; border:1px solid #353535; border-radius:2px;">
                 <tr>
                     <td align="left" valign="middle" style="color:#FFFFFF; font-family:Helvetica, Arial, sans-serif; font-size:20px; font-weight:bold; letter-spacing:-.5px; line-height:150%; padding-top:15px; padding-right:30px; padding-bottom:15px; padding-left:30px;">
                         <a href="http://www.stemsible.com" target="_blank" style="color:#FFFFFF; text-decoration:none;">Stemsible</a>
@@ -20,7 +20,7 @@
                                     <img src="http://stemsible.com/images/thumbs-up2.png"  width="25%" class="columnImage" />
                                 </td>
                                 <td valign="center" class="leftColumnContent" align="left" style="padding:0px;padding-left:10px;">
-                                    <h4 style="margin:0px;margin-top:5px;font-size:12px;">{{ likes }} new likes</h4>
+                                    <p style="margin:0px;margin-top:5px;font-size:14px;"><b>{{ likes }}</b> new likes</p>
                                 </td>
                             </tr>
                         </table>
@@ -33,7 +33,7 @@
                                     <img src="http://stemsible.com/images/comment.png" width="50%" class="columnImage" />
                                 </td>
                                 <td valign="center" class="leftColumnContent" align="left" style="padding:0px;padding-left:10px;">
-                                    <h4 style="margin:0px;margin-top:5px;font-size:12px;">{{ comments }} new comments</h4>
+                                    <p style="margin:0px;margin-top:5px;font-size:14px;"><b>{{ comments }}</b> new comments</p>
                                 </td>
                             </tr>
                         </table>
@@ -46,7 +46,7 @@
                                     <img src="http://stemsible.com/images/generic_icon.png"  width="25%" class="columnImage" />
                                 </td>
                                 <td valign="center" class="leftColumnContent" align="left" style="padding:0px;padding-left:10px;">
-                                    <h4 style="margin:0px;margin-top:5px;font-size:12px;">{{ plength }} new posts</h4>
+                                    <p style="margin:0px;margin-top:5px;font-size:14px;"><b>{{ plength }}</b> new posts</p>
                                 </td>
                             </tr>
                         </table>
@@ -54,7 +54,7 @@
                 </tr>
             </table>
         </table>
-        <hr noshade=True>
+        <hr/>
 
         {% for p in posts %}
             <table border="0" cellpadding="0" cellspacing="0" width="85%" style="margin-left:7%;margin-right:5%;margin-bottom:15px;">
@@ -63,9 +63,8 @@
 		      <img src=http://stemsible.com/{{ p['profile_image'] }} width="70px" class="columnImage" />
                     </td>
                     <td width="70%">
-                        <h4 style="margin:0px;margin-top:2px;font-size:12px;color:#0B5EBC">{{ p['name'] }}</h4>
-                        <!-- <p style="margin:0px;font-size:12px;">Parent - Austin TX</p> -->
-                        <h5 style="margin:0px;font-size:12px;color:grey;"><i>{{ p['timestamp'] }}</i></h5>
+                        <h4 style="margin:0px;margin-top:2px;font-size:14px;color:#0B5EBC">{{ p['name'] }}</h4>
+                        <h5 style="margin:0px;font-size:12px;color:grey;"><i>{{ p['created'] }}</i></h5>
                     </td>
                 </tr>
             </table>
@@ -73,15 +72,15 @@
             <table border="0" cellpadding="0" cellspacing="0" width="85%" style="margin-left:7%;margin-right:5%;margin-bottom:15px;">
                 <tr>
                     <td>
-                        <p style="font-size:11px;margin:0px;text-overflow:ellipsis;">{{ p['text'] }}</p>
-                        <a href="http://www.stemsible.com" style="font-size:11px;" target="_blank">Go to Stemsible</a>
+                        <p style="font-size:12px;margin:0px 0px 10px 0px;text-overflow:ellipsis;">{{ p['text'] }}</p>
+                        <a href="http://www.stemsible.com" style="font-size:12px;margin-top: 10px;" target="_blank">Go to Stemsible</a>
                     </td>
                 </tr>
             </table>
-            <hr>
+            <hr style="margin-top: 30px">
         {% endfor %}
 
-        <table border="0" cellpadding="0" cellspacing="0" width="100%" style="background-color:#0B5EBC; border:1px solid #353535; border-radius:2px;">
+        <table border="0" cellpadding="0" cellspacing="0" width="100%" style="background-color:#4090bf; border:1px solid #353535; border-radius:2px;">
             <tr>
                 <td align="center" valign="middle" style="color:#FFFFFF; font-family:Helvetica, Arial, sans-serif; font-size:16px; font-weight:bold; letter-spacing:-.5px; line-height:150%; padding-top:15px; padding-right:30px; padding-bottom:15px; padding-left:30px;">
                     <a href="http://www.stemsible.com/" target="_blank" style="color:#FFFFFF; text-decoration:none;">Read more in your feed</a>
@@ -89,6 +88,6 @@
             </tr>
         </table>
         <hr>
-        <p align="center" style="font-size:12px;color:lightgrey;"><b>Created with love, by Stemsible &copy;</b></p>
+        <p align="center" style="font-size:16px;color:grey;"><b>Created with love, by Stemsible &copy;</b></p>
 </body>
 </html>
