restyling verify success and fail on email verification

--- a/web/verification_success.html
+++ b/web/verification_success.html
@@ -1,14 +1,20 @@
 <style>
-  .verify-success .panel {
-     padding: 20px 200px 60px;;
+  .container {
+    background-image: url("../images/boy.jpg");
+    height: 789px;
   }
-  .verify-success h3 {
+  .verify-success .panel {
+     margin-top: 50px;
+     padding: 20px 100px 60px;;
+  }
+  .verify-fail h3 {
      padding-bottom: 20px;
   }
 </style>
 
-<div class='verify-success container row'>
-  <div class='panel col-sm-12'>
+<div class='verify-success row'>
+  <div class='col-sm-3'></div>
+  <div class='panel col-sm-6'>
 
     <h3>Welcome to Stemsible!</h3>
      <p>Email verfication successful.  Your account is now active.</p>
@@ -18,4 +24,5 @@
      <p>
      
    </div>
+  <div class='col-sm-3'></div>
 </div>
