--- a/web/verification_fail.html
+++ b/web/verification_fail.html
@@ -1,14 +1,20 @@
 <style>
+  .container {
+    background-image: url("../images/boy.jpg");
+    height: 789px;
+  }
   .verify-fail .panel {
-     padding: 20px 200px 60px;;
+     margin-top: 50px;
+     padding: 20px 100px 60px;;
   }
   .verify-fail h3 {
      padding-bottom: 20px;
   }
 </style>
 
-<div class='verify-fail container row'>
-  <div class='panel col-sm-12'>
+<div class='verify-fail row'>
+  <div class='col-sm-3'></div>
+  <div class='panel col-sm-6'>
 
     <h3>Oops</h3>
     <p>Email verfication was not successful.</p>
@@ -17,4 +23,5 @@
     <p>
      
    </div>
+  <div class='col-sm-3'></div>
 </div>
