profile page adju columns

--- a/web/profile-section.html
+++ b/web/profile-section.html
@@ -1,10 +1,13 @@
 <div class='container'>
 
-   <div class='leftPanel col-md-5'>
+   <div class='leftPanel col-md-4'>
      %s
    </div>
 
    <div class='rightPanel col-md-7'>
      %s
    </div>
+
+   <div class='rightPanel col-md-1'></div>
+   
 </div>
