email message changes

--- a/lib/emails/verification.html
+++ b/lib/emails/verification.html
@@ -1,5 +1,4 @@
-<h2>Welcome to Stemsible</h2>
-<p>Your almost done ...</p>
+<h2>Your almost done ...</h2>
 <p>Please click on the following link to complete your registration</p>
 <p>%s</p>
 <p>Thanks,</p>
