--- a/lib/emails/welcome.html
+++ b/lib/emails/welcome.html
@@ -1,6 +1,8 @@
 <p>Dear %s,</p>
 
-<p>Welcome to Stemsible! We are glad to have you as part of our community. We hope you enjoy using Stemsible to discuss, engage, and influence the learning and growth outcomes of our children. If you have feedback, please send us a note at <a href="mailto://info@stemsible.com">info@stemsible.com</a>.</p>
+<h2>Welcome to Stemsible!</h2>
+
+<p>We are glad to have you as part of our community. We hope you enjoy using Stemsible to discuss, engage, and influence the learning and growth outcomes of our children. If you have feedback, please send us a note at <a href="mailto://info@stemsible.com">info@stemsible.com</a>.</p>
 
 <p>Cheers,<br/>
   The Stemsible Team</p>
