Update email verification welcome msg

--- a/web/verification_success.html
+++ b/web/verification_success.html
@@ -16,13 +16,11 @@
   <div class='col-sm-3'></div>
   <div class='panel col-sm-6'>
 
-    <h3>Welcome to Stemsible!</h3>
-     <p>Email verfication successful.  Your account is now active.</p>
-     <p>Thank you for joining!</p>
-     <p>You can now login in and start the conversation about improving our kids education.</p>
-     <p>If you have any questions, write us at <a href="mailto:info@semsible.com">info@stemsible.com</a></p>
-     <p>
-     
+    <h3>Welcome to Stemsible and thanks for joining!</h3>
+    <p>Your email verification was successful and your Stemsible account
+      is now active. Please log in to start making a difference in our
+      children's learning and growth.
+    </p>
    </div>
   <div class='col-sm-3'></div>
 </div>
