While you were away notification: add links directly to post in stemsible

--- a/lib/email.html
+++ b/lib/email.html
@@ -73,7 +73,7 @@
                 <tr>
                     <td>
                         <p style="font-size:12px;margin:0px 0px 10px 0px;text-overflow:ellipsis;">{{ p['text'] }}</p>
-                        <a href="http://www.stemsible.com" style="font-size:12px;margin-top: 10px;" target="_blank">Go to Stemsible</a>
+                        <a href="{{ p['message_url'] }}" style="font-size:12px;margin-top: 10px;" target="_blank">Read More ...</a>
                     </td>
                 </tr>
             </table>
