--- a/lib/emails/summary.html
+++ b/lib/emails/summary.html
@@ -5,19 +5,63 @@
             <table border="0" cellpadding="0" cellspacing="0" width="100%" style="background-color:#4090bf; border:1px solid #353535; border-radius:2px;">
                 <tr>
                     <td align="left" valign="middle" style="color:#FFFFFF; font-family:Helvetica, Arial, sans-serif; font-size:20px; font-weight:bold; letter-spacing:-.5px; line-height:150%; padding-top:15px; padding-right:30px; padding-bottom:15px; padding-left:30px;">
-                        <a href="{{ site_url }}" target="_blank" style="color:#FFFFFF; text-decoration:none;">Stemsible</a>
+                        <a href="http://www.stemsible.com" target="_blank" style="color:#FFFFFF; text-decoration:none;">Stemsible</a>
                     </td>
                 </tr>
             </table>
 
 
-	<p>Hi {{ user_name }},</p>
+            <table border="0" cellpadding="0" cellspacing="0" width="90%"style="margin:10px;">
+                <tr>
+                    <td align="center" valign="top" width="30%" class="templateColumnContainer">
+                        <table border="0" cellpadding="10" cellspacing="0" width="100%">
+                            <tr>
+                                <td valign="top" class="leftColumnContent" style="padding:0px;padding-top:5px;" align="right">
+                                    <img src="http://stemsible.com/images/thumbs-up2.png"  width="25%" class="columnImage" />
+                                </td>
+                                <td valign="center" class="leftColumnContent" align="left" style="padding:0px;padding-left:10px;">
+                                    <p style="margin:0px;margin-top:5px;font-size:14px;"><b>{{ likes }}</b> new likes</p>
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
 
-        {% for a in activity %}
+                    <td align="center" valign="top" width="30%" class="templateColumnContainer">
+                        <table border="0" cellpadding="10" cellspacing="0" width="100%">
+                            <tr>
+                                <td valign="top" class="leftColumnContent" style="padding:0px;padding-top:5px;" align="right">
+                                    <img src="http://stemsible.com/images/comment.png" width="50%" class="columnImage" />
+                                </td>
+                                <td valign="center" class="leftColumnContent" align="left" style="padding:0px;padding-left:10px;">
+                                    <p style="margin:0px;margin-top:5px;font-size:14px;"><b>{{ comments }}</b> new comments</p>
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+
+                    <td align="center" valign="top" width="30%" class="templateColumnContainer">
+                        <table border="0" cellpadding="10" cellspacing="0" width="100%">
+                            <tr>
+                                <td valign="top" class="leftColumnContent" style="padding:0px;padding-top:5px;" align="right">
+                                    <img src="http://stemsible.com/images/generic_icon.png"  width="25%" class="columnImage" />
+                                </td>
+                                <td valign="center" class="leftColumnContent" align="left" style="padding:0px;padding-left:10px;">
+                                    <p style="margin:0px;margin-top:5px;font-size:14px;"><b>{{ plength }}</b> new posts</p>
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+            </table>
+        </table>
+        <hr/>
+
+
+        {% for p in posts %}
             <table border="0" cellpadding="0" cellspacing="0" width="85%" style="margin-left:7%;margin-right:5%;margin-bottom:15px;">
                 <tr>
                     <td width="10%">
-		      <img src=http://stemsible.com/{{ a['profile_image'] }} width="70px" class="columnImage" />
+		      <img src=http://stemsible.com/{{ p['profile_image'] }} width="70px" class="columnImage" />
                     </td>
                     <td width="70%">
                         <h4 style="margin:0px;margin-top:2px;font-size:14px;color:#0B5EBC">{{ p['name'] }}</h4>
