updated landing page UI

--- a/web/forgot.html
+++ b/web/forgot.html
@@ -1,3 +1,3 @@
-<header>Your password has been send!</header>>
+<header>Your password has been sent!</header>>
 
-<p1>Steamsible Team</p1>
+<p1>Stemsible Team</p1>
