--- a/web/home.html
+++ b/web/home.html
@@ -1,35 +1,35 @@
 <div id='home-page' class='row'>
 
-   <div class='col-xs-12 col-sm-8'>
+   <div class='col-xs-12 col-sm-8 col-md-8'>
       <h3 id="header1">Engage, Discuss, and Influence<br/>
-          Our Children's Learning and Growth.</h3>
+          Our Children's Learning, Growth, and Wellbeing.</h3>
 
-      <div class='col-xs-9 col-sm-6'>
+      <div class='col-xs-9 col-sm-6 col-md-5'>
          <h4>Ask</h4>
-         <p>Ask each other questions about school curriculum and
-            effective learning techniques</p>
+         <p>... questions about school curriculum, kids activities, or
+            coaching techniques.</p><br>
 
          <h4>Share</h4>
-         <p>Share a cool way to teach or learn a concept; share your
-            child's accomplishments</p>
+         <p>... a cool way to teach or learn a concept; share your
+            child's accomplishments.</p><br>
 
          <h4>Advice</h4>
-         <p>Give or seek advice on how to manage a challenging child or
-            which AP courses to take</p>
+         <p>... (give/seek) on how to manage a special needs child or
+            which AP courses to take.</p>
       </div>
 
-      <div class='col-xs-9 col-sm-6'>
+      <div class='col-xs-9 col-sm-6 col-md-5'>
          <h4>Discuss</h4>
-         <p>Discuss ideas for an upcomming field trip or new ways to
-            do a science project</p>
+         <p>... ideas for an upcomming field trip or new ways to
+            do a science project.</p><br>
 
          <h4>Discover</h4>
-         <p>Discover new ways to make school and learning fun and
-            interesting for your child</p>
+         <p>... new ways to make school and learning fun and
+            interesting for your child.</p><br>
 
          <h4>Influence</h4>
-         <p>Influence other parents with personal experiences, lessons,
-            and best practices</p>
+         <p>... other parents with personal experiences, lessons,
+            and best practices.</p>
       </div>
    </div>
 
