--- a/web/home.html
+++ b/web/home.html
@@ -1,10 +1,10 @@
 <div id='home-page' class='row'>
 
-   <div class='col-xs-12 col-sm-8 col-md-8'>
+   <div class='col-xs-12 col-sm-8'>
       <h3 id="header1">Engage, Discuss, and Influence<br/>
           Our Children's Learning, Growth, and Wellbeing.</h3>
 
-      <div class='col-xs-9 col-sm-6 col-md-5'>
+      <div class='col-xs-9 col-sm-6'>
          <h4>Ask</h4>
          <p>... questions about school curriculum, kids activities, or
             coaching techniques.</p><br>
@@ -18,7 +18,7 @@
             which AP courses to take.</p>
       </div>
 
-      <div class='col-xs-9 col-sm-6 col-md-5'>
+      <div class='col-xs-9 col-sm-6'>
          <h4>Discuss</h4>
          <p>... ideas for an upcomming field trip or new ways to
             do a science project.</p><br>
