new topics, landing page column size

--- a/web/new-message2.html
+++ b/web/new-message2.html
@@ -2,7 +2,8 @@
   <div class='newMessage'>
     <span class='.form-group'>
       <textarea class='newMessageText form-control' rows='1'
-		name='new_message' placeholder="What's on your mind?"></textarea>
+		name='new_message'
+        placeholder="What's on your mind? Ask, discuss, and share topics."></textarea>
 	  </br>
 	  <div class=text-right>
         <button type="button" class="postButton btn btn-primary btn-md customButton"
