Fix hotlink in verification email for yahoo and hotmail

--- a/lib/emails/verification.html
+++ b/lib/emails/verification.html
@@ -1,6 +1,6 @@
 <h2>Your almost done ...</h2>
 <p>Please click on the following link to complete your registration</p>
-<p>%s</p>
+<p><a href="%s">%s</a></p>
 <p>Thanks,</p>
 <p>The Stemsible Team</p>
 <p>- Empowering parents and teachers to improve our children's learning and growth outcomes.</p>
