Url preview styles. Work in progress

--- a/web/new-message2.html
+++ b/web/new-message2.html
@@ -5,6 +5,8 @@
 		name='new_message'
         placeholder="What's on your mind? Ask, discuss, and share topics."></textarea>
 	  </br>
+    <!-- Url preview placeholder -->
+    <div class="selector-wrapper"></div>
 	  <div class=text-right>
         <button type="button" class="postButton btn btn-primary btn-md customButton"
         onclick='submit()'>Post</button>
