--- a/web/new-message2.html
+++ b/web/new-message2.html
@@ -1,15 +1,18 @@
-<div class='messageCard'>
-  <div class='newMessage'>
-    <span class='.form-group'>
-      <textarea class='newMessageText form-control' rows='1'
-		name='new_message'
-        placeholder="What's on your mind? Ask, discuss, and share topics."></textarea>
-	  </br>
+<div class="messageCard">
+  <div class="newMessage">
+    <span class=".form-group">
+      <textarea
+        class="newMessageText form-control" rows="1" name="new_message"
+        placeholder="What's on your mind? Ask, discuss, and share topics."
+      ></textarea>
+    </br>
     <!-- Url preview placeholder -->
     <div class="selector-wrapper"></div>
-	  <div class=text-right>
-        <button type="button" class="postButton btn btn-primary btn-md customButton"
-        onclick='submit()'>Post</button>
+    <div class=text-right>
+        <button
+          type="submit"
+          class="postButton btn btn-primary btn-md customButton"
+        >Post</button>
       </div>
     </span>
   </div>
