removing type=search results=10 - doesn't seem to do anythging

--- a/web/header2.html
+++ b/web/header2.html
@@ -10,7 +10,7 @@
     <form id='header-search-form' name='header-search-form'
 	  method='post' action='/main.py'>
         <input class='form-control submit-on-enter' id='search' name='search'
-	       type=search results=10 value="%s" placeholder="Search Stemsible" />
+	       value="%s" placeholder="Search Stemsible" />
      </form>
   </div>
 
