Summary Email: report number of new posts.  Also added mech. to not send mail in dev environments

--- a/lib/emails/summary.html
+++ b/lib/emails/summary.html
@@ -46,7 +46,7 @@
                                     <img src="http://stemsible.com/images/generic_icon.png"  width="25%" class="columnImage" />
                                 </td>
                                 <td valign="center" class="leftColumnContent" align="left" style="padding:0px;padding-left:10px;">
-                                    <p style="margin:0px;margin-top:5px;font-size:14px;"><b>{{ plength }}</b> new posts</p>
+                                    <p style="margin:0px;margin-top:5px;font-size:14px;"><b>{{ new_posts }}</b> new posts</p>
                                 </td>
                             </tr>
                         </table>
