adding explainer video to home page
Style explainer video: fix forgot-password placement and color on mobile; fix H1 placement on mobile.

--- a/web/home.html
+++ b/web/home.html
@@ -4,6 +4,12 @@
       <h3 id="header1">Engage, Discuss, and Influence<br/>
           Our Children's Learning, Growth, and Wellbeing.</h3>
 
+	<div id='explainer-video'>
+	  <iframe frameborder="0" allowfullscreen
+		  src="https://www.youtube.com/embed/ftn_q3F_Vdk">
+	  </iframe>
+	</div>
+
       <div class='col-xs-9 col-sm-5'>
          <h4>Ask</h4>
          <p>... questions about school curriculum, kids activities, or
