Feed: Sort by Comment Create Date

--- a/web/header2.html
+++ b/web/header2.html
@@ -2,7 +2,8 @@
   <div id='company-name' class='col-xs-12 col-sm-3'
        onclick="location.href='main.py'",
        class='cursor-pointer'>
-    <span>Stemsible<span class="small">%s<span></span>
+    <span>Stemsible</span>
+    <div id='env-name'>%s</div>
   </div>
 
 
