expand text input when you click in

--- a/web/new-message2.html
+++ b/web/new-message2.html
@@ -1,7 +1,8 @@
 <div class='messageCard'>
   <div class='newMessage'>
     <span class='.form-group'>
-      <textarea class='newMessageText form-control' rows='1'
+      <textarea id='newMessageText'
+		class='newMessageText form-control' rows='1'
 		name='new_message'
         placeholder="What's on your mind? Ask, discuss, and share topics."></textarea>
 	  </br>
