--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-   <!-- HTML meta refresh URL redirection -->
-   <meta http-equiv="refresh" content="0; url=main.py"
+  <head>
+    <title>Stemsible - Learning, Growth, and Well-Being for Kids</title>
+    <meta name="description" content="Engage, discuss, and influence our children's learning, growth, and well-being at Stemsible.com." />
+    <meta property="og:description" content="Engage, discuss, and influence our children's learning, growth, and well-being at Stemsible.com." />
+    <meta property="og:title" content="Stemsible - Learning, Growth, and Well-Being for Kids" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://www.stemsible.com/" />
+
+    <!-- HTML meta refresh URL redirection -->
+    <meta http-equiv="refresh" content="0; url=main.py" />
+   
 </head>
 </html>
