--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,13 @@
 <html>
   <head>
     <title>Stemsible - Learning, Growth, and Well-Being for Kids</title>
+
     <meta name="description" content="Engage, discuss, and influence our children's learning, growth, and well-being at Stemsible.com." />
+    <meta name="keywords" content="Education,Learning" />
+    <meta name="provider_name" content="Stemsible" />
+    <meta name="provider_url" content="http://www.stemsible.com" />
+
+
     <meta property="og:description" content="Engage, discuss, and influence our children's learning, growth, and well-being at Stemsible.com." />
     <meta property="og:title" content="Stemsible - Learning, Growth, and Well-Being for Kids" />
     <meta property="og:type" content="website" />
@@ -10,6 +16,6 @@
 
     <!-- HTML meta refresh URL redirection -->
     <meta http-equiv="refresh" content="0; url=main.py" />
-   
+
 </head>
 </html>
