Home Page: New logo

--- a/web/header1.html
+++ b/web/header1.html
@@ -2,7 +2,8 @@
   <div id='company-name' class='col-xs-12 col-sm-4'
        onclick="location.href='main.py'",
        class='cursor-pointer'>
-    <span>Stemsible%s</span>
+    <span><img src="images/stemsible_logo.png" width="260px"/></span>
+    <!-- span>%s</span -->
   </div>
 
   <div id='header-login' class='col-xs-12 col-sm-8'>
