privacy.html: added missing closing html tags

--- a/web/privacy.html
+++ b/web/privacy.html
@@ -73,5 +73,7 @@
 
     <h4>Contact Us</h4>
 
-    <p>If you have any questions about this Privacy Policy, please <a href="mailto:info@stemsible.com?Subject=Privacy%20Policy">email</a> us at info@stemsible.com.
+    <p>If you have any questions about this Privacy Policy, please <a href="mailto:info@stemsible.com?Subject=Privacy%20Policy">email</a> us at info@stemsible.com.</p>
  
+   </div>
+</div>
